--- a/Maruplay/.env
+++ b/Maruplay/.env
@@ -1,1 +1,2 @@
 VITE_BASE_URL = "https://api.h8-fern.foxhub.space"
+VITE_GOOGLE_CLIENT_ID = "542808122877-facahvc57pcchj88konlmkf70ihcd5m1.apps.googleusercontent.com"
